Finished all validations for each route
